--- a/paper3_manuscript.tex
+++ b/paper3_manuscript.tex
@@ -373,7 +373,8 @@ where
 &c(q_2)=m_2r_1r_2\sin(q_2),\\
 &\xi_1(q_1,q_2) =((m_1+m_2)r_1\cos(q_2)+m_2r_2\cos(q_1+q_2)),\\
 &\xi_2(q_1,q_2) = m_2r_2\cos(q_1+q_2).
-\end{align*}
+\end{align*}\par
+The values of the parameters are listed here, $r_1=1m$, $r_2=0.8m$, $J_1=5 kgm$, $J_2=5kgm$, $m_1=0.5kg$, $m_2=1.5kg$.
 \section{Acknowledgment}
 This work is partially supported by the National Natural Science Foundation of China (No. 61104112, 61503097).
 \section{References}
